# gturtle

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
tests/: CMakeLists.txt  test_turtle.cc
turtle/: CMakeLists.txt  mock_turtle.h  painter.h  turtle.h
